Align payments with Hyperswitch payment experience
